# xslb_reader

./: .gitignore  README.md  create_test_xlsm.py  licence.txt  pyproject.toml  reader.py  ruff.toml  strip_xlsb_metadata.py
.github/workflows/: ci.yml  release.yml
test-data/: Finance_Ledger_100_Unique_Functions.xlsb  Finance_Ledger_100_Unique_Functions.xlsm  Finance_Ledger_100_Unique_Functions.xlsx
tests/: test_reader.py
xlsb_reader/: __init__.py  _cli.py  _reader.py  _vba_reader.py  _xlsx_reader.py
