[project]
name = "xlsb_reader"
version = "0.1.0rc8"
description = "Pure-Python reader for Excel Binary Workbook (.xlsb) files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "firstzero"}]
license = {text = "MIT"}
keywords = ["excel", "xlsb", "spreadsheet", "formula"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
xlsb_reader = "xlsb_reader._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ruff", "ty", "pip-audit"]
